<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/comment_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@android:color/white"
    android:padding="16dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/comment_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:text="@string/placeholder_comment"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/like_dislike_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <LinearLayout
                android:id="@+id/like_dislike_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ToggleButton
                    android:id="@+id/like_button"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toggle_button_background"
                    android:backgroundTint="@color/white"
                    android:drawableTop="@drawable/ic_thumbs_up"
                    android:contentDescription="@string/like"
                    android:text="@string/placeholder_btn_nums"
                    android:textOff="@string/placeholder_btn_nums"
                    android:textOn="@string/placeholder_btn_nums2" />

                <ToggleButton
                    android:id="@+id/dislike_button"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toggle_button_background"
                    android:backgroundTint="@color/white"
                    android:drawableTop="@drawable/ic_thumbs_down"
                    android:contentDescription="@string/dislike"
                    android:text="@string/placeholder_btn_nums"
                    android:textOff="@string/placeholder_btn_nums"
                    android:textOn="@string/placeholder_btn_nums2" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>