<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newscard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/newscard_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/news_image_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/stars_background" />

        <TextView
            android:id="@+id/newscard_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heading"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newscard_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/description" />

        <LinearLayout
            android:id="@+id/like_dislike_container"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/like_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/ic_collapse_arrow"
                android:backgroundTint="@color/white"
                android:buttonTint="@android:color/transparent"
                android:drawableTop="@drawable/ic_thumbs_up"
                android:contentDescription="@string/like"
                android:text="@string/zero"
                android:textOff="@string/zero"
                android:textOn="@string/zero" />

            <ToggleButton
                android:id="@+id/dislike_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/ic_collapse_arrow"
                android:backgroundTint="@android:color/white"
                android:buttonTint="@android:color/transparent"
                android:drawableTop="@drawable/ic_thumbs_down"
                android:contentDescription="@string/dislike"
                android:text="@string/zero"
                android:textOff="@string/zero"
                android:textOn="@string/zero" />


            <ToggleButton
                android:id="@+id/comment_button"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/ic_collapse_arrow"
                android:backgroundTint="@android:color/white"
                android:buttonTint="@android:color/transparent"
                android:drawableTop="@drawable/ic_comment"
                android:text="@string/zero"
                android:textOff="@string/zero"
                android:textOn="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_comment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/comment_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/create_comment"
                    android:autofillHints="@string/create_comment"
                    android:inputType="textMultiLine"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/send_comment_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/send_comment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/send_comment"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/comment_input"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_send" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
